--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-2024
+<!doctype html>
+<html>
+<head>
+<meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
+<title></title></head>
+<body><p><strong>程序设计专题</strong></p>
+<h1>基础知识要点</h1>
+<p>C++基础语法知识</p>
+<pre><code class='language-c++' lang='c++'>Hello World
+</code></pre>
+<p>变量、选择、循环结构</p>
+<a href="hxh.html">小小科学家</a>--
+<a href="https://github.com/hxiaohua" target="_blank">某人的github</a>
+<h2>有用的东东</h2>
+	<a href="https://developer.aliyun.com/mirror" target="_blank">阿里云镜像站</a>-
+</body>
+</html>
