--- a/index.html
+++ b/index.html
@@ -1,17 +1,67 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-<meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
-<title></title></head>
-<body><p><strong>程序设计专题</strong></p>
-<h1>基础知识要点</h1>
-<p>C++基础语法知识</p>
-<pre><code class='language-c++' lang='c++'>Hello World
-</code></pre>
-<p>变量、选择、循环结构</p>
-<a href="hxh.html">小小科学家</a>--
-<a href="https://github.com/hxiaohua" target="_blank">某人的github</a>
-<h2>有用的东东</h2>
-	<a href="https://developer.aliyun.com/mirror" target="_blank">阿里云镜像站</a>-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>个人博客</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        header {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #0073e6;
+            color: white;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        main {
+            padding: 20px;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #f4f4f4;
+            color: #666;
+        }
+        .beian {
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>欢迎来到我的个人博客</h1>
+        </header>
+        <main>
+            <h2>关于我</h2>
+            <p>你好！我是[你的名字]，一名[职业/爱好]爱好者。我喜欢分享关于[兴趣领域]的见解和经验。希望我的博客能为你带来启发和帮助。</p>
+
+            <h2>博客内容</h2>
+            <p>在这里，你会发现关于[主题1]、[主题2]和[主题3]的文章。我致力于提供高质量和有价值的内容，期待与你交流和探讨。</p>
+
+            <h2>联系方式</h2>
+            <p>如果你有任何问题或建议，欢迎通过[邮箱地址]联系我。</p>
+        </main>
+        <footer>
+            <p>© 2024 个人博客. 保留所有权利.</p>
+            <p class="beian">网站备案号：京ICP备12345678号-1</p>
+            <p class="beian">公安备案号：京公网安备 11010502012345号</p>
+        </footer>
+    </div>
 </body>
 </html>
