--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         </main>
         <footer>
             <p>© 2024 个人博客. 保留所有权利.</p>
-            <p class="beian">网站备案号：京ICP备12345678号-1</p>
-            <p class="beian">公安备案号：京公网安备 11010502012345号</p>
+            <p class="beian">网站备案号：赣ICP备20002400号-1</p>
+            <p class="beian">公安备案号：赣公网安备36030202000345号</p>
         </footer>
     </div>
 </body>
