--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人博客</title>
+    <title>信息技术与人工智能博客</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -45,20 +45,20 @@
 <body>
     <div class="container">
         <header>
-            <h1>欢迎来到我的个人博客</h1>
+            <h1>欢迎来到信息技术与人工智能博客</h1>
         </header>
         <main>
             <h2>关于我</h2>
-            <p>你好！我是[你的名字]，一名[职业/爱好]爱好者。我喜欢分享关于[兴趣领域]的见解和经验。希望我的博客能为你带来启发和帮助。</p>
+            <p>你好！我是[小AI]，一名信息技术和人工智能爱好者。我喜欢探索前沿科技，分享关于人工智能、机器学习和数据科学的见解和经验。希望我的博客能为你带来启发和帮助。</p>
 
             <h2>博客内容</h2>
-            <p>在这里，你会发现关于[主题1]、[主题2]和[主题3]的文章。我致力于提供高质量和有价值的内容，期待与你交流和探讨。</p>
+            <p>在这里，你会发现关于人工智能、机器学习和数据科学的文章。我致力于提供高质量和有价值的内容，期待与你交流和探讨。</p>
 
             <h2>联系方式</h2>
             <p>如果你有任何问题或建议，欢迎通过[邮箱地址]联系我。</p>
         </main>
         <footer>
-            <p>© 2024 个人博客. 保留所有权利.</p>
+            <p>© 2024 信息技术与人工智能博客. 保留所有权利.</p>
             <p class="beian">网站备案号：赣ICP备20002400号-1</p>
             <p class="beian">公安备案号：赣公网安备36030202000345号</p>
         </footer>
