--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p>在这里，你会发现关于人工智能、机器学习和数据科学的文章。我致力于提供高质量和有价值的内容，期待与你交流和探讨。</p>
 
             <h2>联系方式</h2>
-            <p>如果你有任何问题或建议，欢迎通过[邮箱地址]联系我。</p>
+            <p>如果你有任何问题或建议，欢迎通过[207708848@qq.com]联系我。</p>
         </main>
         <footer>
             <p>© 2024 信息技术与人工智能博客. 保留所有权利.</p>
