--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </main>
         <footer>
             <p>© 2024 信息技术与人工智能博客. 保留所有权利.</p>
-            <p class="beian"><a href="https://beian.miit.gov.cn/">网站备案号：赣ICP备20002400号-1</a></p>
+            <p class="beian">网站备案号：<a href="https://beian.miit.gov.cn/">赣ICP备20002400号-1</a></p>
             <p class="beian">公安备案号：赣公网安备36030202000345号</p>
         </footer>
     </div>
